implement login API with email,password encoding and JWT Token generation

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,3 +11,6 @@ spring:
     properties:
       hibernate:
         format_sql: true
+jwt:
+  secret: my-secret-key-my-secret-key-my-secret-key
+  expiration: 3600000
